Changelog
=========


2.1 (unreleased)
----------------

- Nothing changed yet.


2.0 (2011-11-17)
----------------

- Final release
  [phgross]


2.0b10 (2011-09-29)
-------------------

- Issue #1176 alle translatinos mit from zope.i18n import translate
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1176
  [eschmutz]

- Issue #1163 Frage zur Weiterleitung (vgl. auch Ticket 1012)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1163
  Disable renaming documents when assigning forwarding to dossier
  [jbaumann]

- Changed imports of ogds models to new opengever.ogds.models package
  [jbaumann]

- changed deprecated grok.CodeView to grok.View
  [eschmutz]

- Removed non-working parts of ForwardingTransitionController tests
  [lgraf]

- Fixed testing of deadline datetime widget
  [lgraf]

- added test-buildout for plone 4.1
  [eschmutz]

2.0b9 (2011-08-24)
------------------

- Issue #1135 Textanpassung bei Weiterleitung
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1135/
  changed helptext for the responsible field in the forwarding form
  [phgross]

- Fix tests
  [eschmutz]

- moved tests from collective.testcaselayer to plone.app.testing
  [eschmutz]

- Added missing dependency on opengever.task
  [lgraf]

- Issue #1027 Feedback Fokus: Posteingang: Eingang akzeptieren (unnoetiger Screen)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1027/
  overwrote the render method of the response form,
  for implements direct responses for some transitions
  [phgross]


2.0b8
-----

- Added several Tests for opengever.inbox
  [jinfanger]

- Added Doctests for forwardings
  [phgross]

- remove paths parsing, the contenttree widget expected a correct path
  [phgross]

- Issue #1071 Ausgewaehltes Dokument wird beim Erstellen einer Weiterleitung nicht respektiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1071
  [phgross]
